@@ -23,6 +23,7 @@ Package org.springframework.webflow.conversation
 
 Package org.springframework.webflow.engine
 * Added invoke(String, Action) method to AbstractFlowBuilder.
+* Added initBuilder() hook method to AbstractFlowBuilder.
 
 Package org.springframework.webflow.execution
 * Added a holder for the FlowExecutionContext of a request (SWF-163).
